[GEOT-6964] Java 17 compatibility
* Add GitHub action to verify build with Java 17 (early access)
* Rework to avoid use of reflection to override static final in testcase
* Avoid SimpleDateFormat ParseException by not using Locale.CANADA
* Handle XML prettify test result comparison issue
* Upgrade Mockito